--- a/gitdocu.html
+++ b/gitdocu.html
@@ -1,35 +1,39 @@
 <!DOCTYPE html>
 <html lang="de">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mamazon | Home</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="signup.css" />
-    <script src="./signup.js"></script>
-  </head>
 
-  <body>
-    <div class="navbarContainer">
-      <div class="navArea navAreaOne">
-        <a href="index.html">
-          <img src="./images/logo.png" class="logoImg" href="impressum.html" />
-        </a>
-        <a class="navBtn" href="impressum.html">impressum</a>
-        <a class="navBtn" href="max.html">max</a>
-      </div>
-      <div class="navArea navAreaTwo">
-        <h2>Mamazon</h2>
-      </div>
-      <div class="navArea navAreaThree">
-        <a class="navBtn" href="login.html">Login</a>
-      </div>
-    </div>
-    <div id="contentContainer" class="contentContainer">
-      <h1>Git Docu</h1>
-      <div id="gitDocuContainer"></div>
-    </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Mamazon | Home</title>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="gitdocu.css" />
+  <script src="./gitdocu.js"></script>
+</head>
 
-    <div class="footerContainer"></div>
-  </body>
+<body>
+  <div class="navbarContainer">
+    <div class="navArea navAreaOne">
+      <a href="index.html">
+        <img src="./images/logo.png" class="logoImg" href="impressum.html" />
+      </a>
+      <a class="navBtn" href="impressum.html">impressum</a>
+      <a class="navBtn" href="max.html">max</a>
+    </div>
+    <div class="navArea navAreaTwo">
+      <h2>Mamazon</h2>
+    </div>
+    <div class="navArea navAreaThree">
+      <a class="navBtn" href="login.html">Login</a>
+    </div>
+  </div>
+  <div id="contentContainer" class="contentContainer">
+    <h1>Git Docu</h1>
+    <div id="gitDocuContainer">
+      <button onclick="fetchGitWorkflowImage()">click me</button>
+    </div>
+  </div>
+
+  <div class="footerContainer"></div>
+</body>
+
 </html>
